--- a/2014/scss/base/_mixins.scss
+++ b/2014/scss/base/_mixins.scss
@@ -9,16 +9,16 @@ $sprites-retina: sprite-map("sprites-2x/*.png", $layout: smart);
   height: image-height(sprite-file($sprites, $name));
   width: image-width(sprite-file($sprites, $name));
   
-  @media (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 3/2), (min-device-pixel-ratio: 2) {
-    // Workaround for https://gist.github.com/2140082
-    @if (sprite-position($sprites, $name) != sprite-position($sprites-retina, $name)) {
-      $ypos: round(nth(sprite-position($sprites-retina, $name), 2) / 2);
-      background-position: 0 $ypos;
-    }
-    // Hard coded width of the normal sprite image. There must be a smarter way to do this.
-    @include background-size(444px auto);
-    background-image: sprite-url($sprites-retina);
-  }
+  // @media (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 3/2), (min-device-pixel-ratio: 2) {
+  //   // Workaround for https://gist.github.com/2140082
+  //   @if (sprite-position($sprites, $name) != sprite-position($sprites-retina, $name)) {
+  //     $ypos: round(nth(sprite-position($sprites-retina, $name), 2) / 2);
+  //     background-position: 0 $ypos;
+  //   }
+  //   // Hard coded width of the normal sprite image. There must be a smarter way to do this.
+  //   @include background-size(444px auto);
+  //   background-image: sprite-url($sprites-retina);
+  // }
 }
  
 @mixin retina-background($normal, $retina) {
