update retina sprite mixin to fix bug with sprite images

--- a/2014/css/application.css
+++ b/2014/css/application.css
@@ -1,4 +1,4 @@
-/* normalize.css v2.1.2 | MIT License | git.io/normalize */
+/*! normalize.css v2.1.2 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
    ========================================================================== */
@@ -248,7 +248,7 @@ figure {
  */
 /* line 253, ../scss/base/_normalize.scss */
 fieldset {
-  border: 1px solid silver;
+  border: 1px solid #c0c0c0;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
 }
@@ -444,7 +444,7 @@ h2 {
 h3 {
   font-size: 21px;
   line-height: 1.14285714285714;
-  padding: 0.76em 0 0.39em;
+  padding: 0.76em 0 .39em;
 }
 @media screen and (max-width: 900px) {
   /* line 20, ../scss/base/_typography.scss */
@@ -844,6 +844,7 @@ strong, .strong {
     background-image: url('../images/sprites-s81af367ff4.png');
     background-position: -81px -368px;
     background-repeat: no-repeat;
+    overflow: hidden;
     display: block;
     height: 53px;
     width: 56px;
@@ -857,6 +858,7 @@ strong, .strong {
     background-image: url('../images/sprites-s81af367ff4.png');
     background-position: 0 -685px;
     background-repeat: no-repeat;
+    overflow: hidden;
     display: block;
     height: 104px;
     width: 98px;
@@ -868,6 +870,7 @@ strong, .strong {
     background-image: url('../images/sprites-s81af367ff4.png');
     background-position: -90px 0;
     background-repeat: no-repeat;
+    overflow: hidden;
     display: block;
     height: 34px;
     width: 40px;
@@ -879,6 +882,7 @@ strong, .strong {
     background-image: url('../images/sprites-s81af367ff4.png');
     background-position: 0 0;
     background-repeat: no-repeat;
+    overflow: hidden;
     display: block;
     height: 33px;
     width: 29px;
@@ -890,6 +894,7 @@ strong, .strong {
     background-image: url('../images/sprites-s81af367ff4.png');
     background-position: 0 -150px;
     background-repeat: no-repeat;
+    overflow: hidden;
     display: block;
     height: 22px;
     width: 20px;
@@ -901,6 +906,7 @@ strong, .strong {
     background-image: url('../images/sprites-s81af367ff4.png');
     background-position: 0 -368px;
     background-repeat: no-repeat;
+    overflow: hidden;
     display: block;
     height: 82px;
     width: 81px;
@@ -913,6 +919,7 @@ strong, .strong {
     background-image: url('../images/sprites-s81af367ff4.png');
     background-position: -39px -79px;
     background-repeat: no-repeat;
+    overflow: hidden;
     display: block;
     height: 64px;
     width: 87px;
@@ -925,6 +932,7 @@ strong, .strong {
     background-image: url('../images/sprites-s81af367ff4.png');
     background-position: -81px -368px;
     background-repeat: no-repeat;
+    overflow: hidden;
     display: block;
     height: 53px;
     width: 56px;
@@ -933,6 +941,87 @@ strong, .strong {
     left: auto;
   }
 }
+@media screen and (min-width: 700px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 700px) and (-o-min-device-pixel-ratio: 3 / 2), screen and (min-width: 700px) and (min-device-pixel-ratio: 2) {
+  /* line 4, ../scss/modules/_sprites.scss */
+  header:before, header h1:before, header h2:before, header h3:before, header:after, header h1:after, header h2:after, header h3:after {
+    background-image: url('../images/sprites-2x-s49afbe8350.png');
+    background-size: 140px 1380px;
+    background-position: -81px -368px;
+    height: 53px;
+    width: 56px;
+  }
+}
+@media screen and (min-width: 700px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 700px) and (-o-min-device-pixel-ratio: 3 / 2), screen and (min-width: 700px) and (min-device-pixel-ratio: 2) {
+  /* line 13, ../scss/modules/_sprites.scss */
+  header h1:before {
+    background-image: url('../images/sprites-2x-s49afbe8350.png');
+    background-size: 140px 1380px;
+    background-position: 0 -685px;
+    height: 104px;
+    width: 98px;
+  }
+}
+@media screen and (min-width: 700px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 700px) and (-o-min-device-pixel-ratio: 3 / 2), screen and (min-width: 700px) and (min-device-pixel-ratio: 2) {
+  /* line 18, ../scss/modules/_sprites.scss */
+  header h2:before {
+    background-image: url('../images/sprites-2x-s49afbe8350.png');
+    background-size: 140px 1380px;
+    background-position: -90px 0;
+    height: 34px;
+    width: 40px;
+  }
+}
+@media screen and (min-width: 700px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 700px) and (-o-min-device-pixel-ratio: 3 / 2), screen and (min-width: 700px) and (min-device-pixel-ratio: 2) {
+  /* line 23, ../scss/modules/_sprites.scss */
+  header h3:before {
+    background-image: url('../images/sprites-2x-s49afbe8350.png');
+    background-size: 140px 1380px;
+    background-position: 0 0;
+    height: 33px;
+    width: 29px;
+  }
+}
+@media screen and (min-width: 700px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 700px) and (-o-min-device-pixel-ratio: 3 / 2), screen and (min-width: 700px) and (min-device-pixel-ratio: 2) {
+  /* line 28, ../scss/modules/_sprites.scss */
+  header h3:after {
+    background-image: url('../images/sprites-2x-s49afbe8350.png');
+    background-size: 140px 1380px;
+    background-position: 0 -150px;
+    height: 22px;
+    width: 20px;
+  }
+}
+@media screen and (min-width: 700px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 700px) and (-o-min-device-pixel-ratio: 3 / 2), screen and (min-width: 700px) and (min-device-pixel-ratio: 2) {
+  /* line 33, ../scss/modules/_sprites.scss */
+  header h2:after {
+    background-image: url('../images/sprites-2x-s49afbe8350.png');
+    background-size: 140px 1380px;
+    background-position: 0 -368px;
+    height: 82px;
+    width: 81px;
+  }
+}
+@media screen and (min-width: 700px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 700px) and (-o-min-device-pixel-ratio: 3 / 2), screen and (min-width: 700px) and (min-device-pixel-ratio: 2) {
+  /* line 38, ../scss/modules/_sprites.scss */
+  header h1:after {
+    background-image: url('../images/sprites-2x-s49afbe8350.png');
+    background-size: 140px 1380px;
+    background-position: -39px -79px;
+    height: 64px;
+    width: 87px;
+  }
+}
+@media screen and (min-width: 700px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 700px) and (-o-min-device-pixel-ratio: 3 / 2), screen and (min-width: 700px) and (min-device-pixel-ratio: 2) {
+  /* line 43, ../scss/modules/_sprites.scss */
+  header:after {
+    background-image: url('../images/sprites-2x-s49afbe8350.png');
+    background-size: 140px 1380px;
+    background-position: -81px -368px;
+    height: 53px;
+    width: 56px;
+  }
+}
+
 /* line 14, ../scss/base/susy/_grid.scss */
 * {
   -webkit-box-sizing: border-box;
@@ -1040,7 +1129,18 @@ header h1 a:before {
     background-image: url('../images/sprites-s81af367ff4.png');
     background-position: 0 -789px;
     background-repeat: no-repeat;
+    overflow: hidden;
     display: block;
+    height: 124px;
+    width: 124px;
+  }
+}
+@media screen and (min-width: 900px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 900px) and (-o-min-device-pixel-ratio: 3 / 2), screen and (min-width: 900px) and (min-device-pixel-ratio: 2) {
+  /* line 59, ../scss/application.scss */
+  header h1 a:before {
+    background-image: url('../images/sprites-2x-s49afbe8350.png');
+    background-size: 140px 1380px;
+    background-position: 0 -789px;
     height: 124px;
     width: 124px;
   }
@@ -1066,10 +1166,21 @@ header h1 a:before {
     background-image: url('../images/sprites-s81af367ff4.png');
     background-position: 0 -450px;
     background-repeat: no-repeat;
+    overflow: hidden;
     display: block;
     height: 85px;
     width: 84px;
     margin-bottom: 12px;
+  }
+}
+@media screen and (min-width: 600px) and (max-width: 900px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 600px) and (max-width: 900px) and (-o-min-device-pixel-ratio: 3 / 2), screen and (min-width: 600px) and (max-width: 900px) and (min-device-pixel-ratio: 2) {
+  /* line 59, ../scss/application.scss */
+  header h1 a:before {
+    background-image: url('../images/sprites-2x-s49afbe8350.png');
+    background-size: 140px 1380px;
+    background-position: 0 -450px;
+    height: 85px;
+    width: 84px;
   }
 }
 @media screen and (max-width: 600px) {
@@ -1346,12 +1457,23 @@ p.large + p {
   background-image: url('../images/sprites-s81af367ff4.png');
   background-position: -29px 0;
   background-repeat: no-repeat;
+  overflow: hidden;
   display: block;
   height: 32px;
   width: 61px;
   left: 50%;
   top: 0;
   margin-left: -30px;
+}
+@media (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 3 / 2), (min-device-pixel-ratio: 2) {
+  /* line 283, ../scss/application.scss */
+  .buy-tickets:before {
+    background-image: url('../images/sprites-2x-s49afbe8350.png');
+    background-size: 140px 1380px;
+    background-position: -29px 0;
+    height: 32px;
+    width: 61px;
+  }
 }
 @media screen and (max-width: 700px) {
   /* line 277, ../scss/application.scss */
