--- a/2014/scss/base/_mixins.scss
+++ b/2014/scss/base/_mixins.scss
@@ -1,26 +1,24 @@
 $sprites: sprite-map("sprites/*.png", $layout: smart);
 $sprites-retina: sprite-map("sprites-2x/*.png", $layout: smart);
 
-@mixin sprite-background($name) {
-  background-image: sprite-url($sprites);
-  background-position: sprite-position($sprites, $name);
-  background-repeat: no-repeat;
-  display: block;
-  height: image-height(sprite-file($sprites, $name));
-  width: image-width(sprite-file($sprites, $name));
-  
-  // @media (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 3/2), (min-device-pixel-ratio: 2) {
-  //   // Workaround for https://gist.github.com/2140082
-  //   @if (sprite-position($sprites, $name) != sprite-position($sprites-retina, $name)) {
-  //     $ypos: round(nth(sprite-position($sprites-retina, $name), 2) / 2);
-  //     background-position: 0 $ypos;
-  //   }
-  //   // Hard coded width of the normal sprite image. There must be a smarter way to do this.
-  //   @include background-size(444px auto);
-  //   background-image: sprite-url($sprites-retina);
-  // }
+@mixin sprite-background($sprite) {
+    background-image: sprite-url($sprites);
+    background-position: sprite-position($sprites, $sprite);
+    background-repeat: no-repeat;
+    overflow: hidden;
+    display: block;
+    height: image-height(sprite-file($sprites, $sprite));
+    width: image-width(sprite-file($sprites, $sprite));
+
+    @media (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 3/2), (min-device-pixel-ratio: 2) {
+        background-image: sprite-url($sprites-retina);
+        background-size: (image-width(sprite-path($sprites-retina)) / 2) (image-height(sprite-path($sprites-retina)) / 2);
+        background-position: round(nth(sprite-position($sprites-retina, $sprite), 1) / 2) round(nth(sprite-position($sprites-retina, $sprite), 2) / 2);
+        height: image-height(sprite-file($sprites-retina, $sprite)) / 2;
+        width: image-width(sprite-file($sprites-retina, $sprite)) / 2;
+    }
 }
- 
+
 @mixin retina-background($normal, $retina) {
     background-image: image-url($normal);
 
