--- a/2014/css/application.css
+++ b/2014/css/application.css
@@ -1289,7 +1289,7 @@ p.large + p {
   margin-bottom: 24px;
   margin-left: auto;
   margin-right: auto;
-  width: 252px;
+  width: 270px;
 }
 /* line 159, ../scss/application.scss */
 .button:hover {
@@ -1298,14 +1298,13 @@ p.large + p {
   color: white;
 }
 /* line 161, ../scss/application.scss */
-.button.sponsor {
-  font-size: 24px;
+.button.alternate {
   font-weight: 400;
   background: transparent;
   color: #2da4cc;
 }
-/* line 167, ../scss/application.scss */
-.button.sponsor:hover {
+/* line 165, ../scss/application.scss */
+.button.alternate:hover {
   color: #a00;
   border-color: #a00;
   background: transparent;
@@ -1317,16 +1316,12 @@ p.large + p {
     font-weight: 400;
     display: block;
     margin-bottom: 12px;
-    max-width: 260px;
+    max-width: 230px;
     margin-top: 2%;
-  }
-  /* line 178, ../scss/application.scss */
-  .button.sponsor {
-    font-size: 18px;
   }
 }
 
-/* line 182, ../scss/application.scss */
+/* line 178, ../scss/application.scss */
 .image-gallery {
   overflow: hidden;
   position: relative;
@@ -1335,13 +1330,13 @@ p.large + p {
   padding-top: 45%;
 }
 @media screen and (max-width: 700px) {
-  /* line 182, ../scss/application.scss */
+  /* line 178, ../scss/application.scss */
   .image-gallery {
     margin-top: 1.5em;
     padding-top: 60%;
   }
 }
-/* line 194, ../scss/application.scss */
+/* line 190, ../scss/application.scss */
 .image-gallery:before {
   content: "";
   display: block;
@@ -1354,7 +1349,7 @@ p.large + p {
   background: transparent url("../images/sand-shadow.png") no-repeat top center;
   background-size: 100% auto;
 }
-/* line 207, ../scss/application.scss */
+/* line 203, ../scss/application.scss */
 .image-gallery figure {
   display: block;
   position: absolute;
@@ -1363,14 +1358,14 @@ p.large + p {
   bottom: 0;
   left: 0;
 }
-/* line 213, ../scss/application.scss */
+/* line 209, ../scss/application.scss */
 .image-gallery img {
   display: block;
   position: absolute;
   top: 0;
   width: 100%;
 }
-/* line 220, ../scss/application.scss */
+/* line 216, ../scss/application.scss */
 .image-gallery figcaption {
   display: block;
   position: absolute;
@@ -1384,51 +1379,51 @@ p.large + p {
   -moz-box-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.6);
 }
-/* line 230, ../scss/application.scss */
+/* line 226, ../scss/application.scss */
 .image-gallery figcaption a {
   color: white;
   text-decoration: none;
 }
-/* line 231, ../scss/application.scss */
+/* line 227, ../scss/application.scss */
 .image-gallery figcaption:hover, .image-gallery figcaption:active {
   background: #2da4cc;
 }
 @media screen and (max-width: 700px) {
-  /* line 220, ../scss/application.scss */
+  /* line 216, ../scss/application.scss */
   .image-gallery figcaption {
     font-size: 14px;
     right: 5%;
   }
 }
 
-/* line 239, ../scss/application.scss */
+/* line 235, ../scss/application.scss */
 .page {
   padding: 0;
   margin: 0 auto;
 }
-/* line 242, ../scss/application.scss */
+/* line 238, ../scss/application.scss */
 .page iframe {
   border: none;
   height: 600px;
 }
 @media screen and (max-width: 700px) {
-  /* line 242, ../scss/application.scss */
+  /* line 238, ../scss/application.scss */
   .page iframe {
     height: 640px;
   }
 }
-/* line 250, ../scss/application.scss */
+/* line 246, ../scss/application.scss */
 .page ol {
   padding: 0;
 }
-/* line 255, ../scss/application.scss */
+/* line 251, ../scss/application.scss */
 .page li {
   position: relative;
   list-style: none;
   padding-left: 24px;
   padding-bottom: 8px;
 }
-/* line 261, ../scss/application.scss */
+/* line 257, ../scss/application.scss */
 .page li:before {
   position: absolute;
   left: 0;
@@ -1437,20 +1432,20 @@ p.large + p {
   height: 24px;
   width: 24px;
 }
-/* line 271, ../scss/application.scss */
+/* line 267, ../scss/application.scss */
 .page li h3 {
   padding-top: 4px;
   font-weight: 500;
 }
 
-/* line 277, ../scss/application.scss */
+/* line 273, ../scss/application.scss */
 .buy-tickets {
   max-width: 640px;
   margin: 0 auto 48px;
   padding: 36px 20px 24px;
   position: relative;
 }
-/* line 283, ../scss/application.scss */
+/* line 279, ../scss/application.scss */
 .buy-tickets:before {
   position: absolute;
   content: "";
@@ -1466,7 +1461,7 @@ p.large + p {
   margin-left: -30px;
 }
 @media (-webkit-min-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 3 / 2), (min-device-pixel-ratio: 2) {
-  /* line 283, ../scss/application.scss */
+  /* line 279, ../scss/application.scss */
   .buy-tickets:before {
     background-image: url('../images/sprites-2x-s49afbe8350.png');
     background-size: 140px 1380px;
@@ -1476,16 +1471,16 @@ p.large + p {
   }
 }
 @media screen and (max-width: 700px) {
-  /* line 277, ../scss/application.scss */
+  /* line 273, ../scss/application.scss */
   .buy-tickets {
     padding-top: 0;
   }
-  /* line 294, ../scss/application.scss */
+  /* line 290, ../scss/application.scss */
   .buy-tickets:before {
     background: none;
   }
 }
-/* line 300, ../scss/application.scss */
+/* line 296, ../scss/application.scss */
 .buy-tickets iframe {
   max-width: 640px;
   margin: 12px auto 24px;
@@ -1499,13 +1494,13 @@ p.large + p {
   border-radius: 4px;
 }
 
-/* line 308, ../scss/application.scss */
+/* line 304, ../scss/application.scss */
 .faq {
   max-width: 640px;
   padding: 0px 24px 24px;
 }
 
-/* line 313, ../scss/application.scss */
+/* line 309, ../scss/application.scss */
 #event {
   margin-bottom: 3em !important;
 }
