--- a/2014/scss/application.scss
+++ b/2014/scss/application.scss
@@ -13,7 +13,7 @@
 
 @include border-box-sizing;
 
-html{ background: transparent url('../images/sand.jpg') repeat;}
+html{ background: #FEF0C4 url('../images/texture.png') repeat-y;}
 body { position: relative;}
 
 a {
