--- a/2014/scss/base/_var.scss
+++ b/2014/scss/base/_var.scss
@@ -1,2 +1,2 @@
 $blue:	#2da4cc;
-$sans:	"proxima nova", "proxima-nova", "helvetica neue", helvetica, arial, sans-serif;
+$sans:	"proxima nova soft", "proxima-nova-soft", "helvetica neue", helvetica, arial, sans-serif;
